--- a/app/views/top/home.html.erb
+++ b/app/views/top/home.html.erb
@@ -1,7 +1,7 @@
 <%@elements.each do|element|%>
   <ul>
     <li>
-      <%=link_to(element.inner_text,element[:href])%>
+      <%=link_to(element.title,element.url)%>
     </li>
   </ul>
 <%end%>
