--- a/app/views/top/home.html.erb
+++ b/app/views/top/home.html.erb
@@ -17,6 +17,9 @@
             </li>
           <%end%>
         </ul>
+        <div id="pagenation">
+          <%= paginate @elements %>
+        </div>
       </div>
     </div>
   </div>
