--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <%= yield %>
       <div id="copyrights">
         <div class="container">
-        <p>Created by <strong><a href="https://nemlog.nem.social/profile/3981" target="_blank">yonnsann</a></strong></p>
+        <p>Created by <strong><a href="https://nemlog.nem.social/profile/3981" target="_blank">hukushima</a></strong></p>
           <p>
             &copy; Copyrights <strong>Solid</strong>. All Rights Reserved
           </pp>
